@@ -1,3 +1,10 @@
+2008-05-28  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-spu.c (spu_elf_object_p): New function.
+	(elf_backend_object_p): Define.
+	(build_stub): Correct second word of 8 byte overlay stubs.
+	(spu_elf_relocate_section): Formatting.
+
 2008-05-24  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>
 
 	* elf.c (elfcore_write_register_note): New function.
